--- a/Practica 2.2
+++ b/Practica 2.2
@@ -1,2 +1,69 @@
 #Java
 
+class Punto {
+    private int x;
+    private int y;
+
+    public Punto(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+
+    @Override
+    public String toString() {
+        return "Punto(" + x + ", " + y + ")";
+    }
+}
+
+class Linea {
+    private Punto p1;
+    private Punto p2;
+
+    public Linea(Punto p1, Punto p2) {
+        this.p1 = p1;
+        this.p2 = p2;
+    }
+
+    @Override
+    public String toString() {
+        return "Linea(" + p1 + ", " + p2 + ")";
+    }
+
+    public void dibujaLinea() {
+        System.out.println("Dibujando linea desde " + p1 + " hasta " + p2);
+    }
+}
+
+class Circulo {
+    private Punto centro;
+    private float radio;
+
+    public Circulo(Punto centro, float radio) {
+        this.centro = centro;
+        this.radio = radio;
+    }
+
+    @Override
+    public String toString() {
+        return "Circulo(centro=" + centro + ", radio=" + radio + ")";
+    }
+
+    public void dibujaCirculo() {
+        System.out.println("Dibujando circulo con centro en " + centro + " y radio " + radio);
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Punto p1 = new Punto(0, 0);
+        Punto p2 = new Punto(1, 1);
+        Linea linea = new Linea(p1, p2);
+        Circulo circulo = new Circulo(p1, 5);
+
+        System.out.println(linea);
+        linea.dibujaLinea();
+
+        System.out.println(circulo);
+        circulo.dibujaCirculo();
+    }
+}
